# LibMaths

./: .gitignore  CMakeLists.txt  LibMaths.h  LibMaths.sln  Matrices.h  README.md  TestVector2D.cpp  Utilities.h  Vectors.h
LibMaths/: LibMaths.cpp  LibMaths.vcxproj  LibMaths.vcxproj.filters
LibMaths/LibMaths/Mat3/: Mat3.h
LibMaths/LibMaths/Mat4/: Mat4.h
LibMaths/LibMaths/Vec2/: Vec2.cpp  Vec2.h
LibMaths/LibMaths/Vec3/: Vec3.h
LibMaths/LibMaths/Vec4/: Vec4.h
LibMaths/LibMaths/x64/Debug/: LibMaths.pch
LibMaths/LibMathsTests/: LibMathsTests.vcxproj  LibMathsTests.vcxproj.filters  Vec2Tests.cpp
LibMaths/Mat2/: Mat2.cpp
LibMaths/Mat3/: Mat3.cpp
LibMaths/Mat4/: Mat4.cpp  Mat4.h
LibMaths/Quaternion/: Quaternion.h
LibMaths/Vec2/: Vec2.cpp  Vec2.h
LibMaths/Vec3/: Vec3.cpp  Vec3.h
LibMaths/Vec4/: Vec4.cpp
LibMathsTests/: LibMathsTests.cpp  LibMathsTests.vcxproj  LibMathsTests.vcxproj.filters  QuaternionTest.cpp  Vec2Tests.cpp  Vec3Test.cpp
Mat3/: FMat3.cpp  FMat3.hpp  Mat3.h
Mat4/: FMat4.cpp  FMat4.hpp  Mat4.h
Quaternion/: FQuat.cpp  FQuat.hpp  Quaternion.h
Vec2/: FVec2.cpp  FVec2.hpp  Vec2.cpp  Vec2.h
Vec3/: DVec3.cpp  DVec3.hpp  FVec3.cpp  FVec3.hpp  Vec3.h
Vec4/: FVec4.cpp  FVec4.hpp  Vec4.h
x64/Debug/: LibMaths.lib
