#LibMaths cmake
cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 20)


file(GLOB_RECURSE TARGET_SOURCE_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/*.cc
	${CMAKE_CURRENT_SOURCE_DIR}/*.cxx
	${CMAKE_CURRENT_SOURCE_DIR}/*.c++)

file(GLOB_RECURSE TARGET_HEADER_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.inl)

    
set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES} ${TARGET_SHADER_FILE} ${TARGET_EXTRA_FILES})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})

set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)

project(${TARGET_NAMES})
add_executable(${TARGET_NAMES} ${TARGET_FILES})

target_sources(${TARGET_NAMES} PRIVATE ${TARGET_FILES})

target_include_directories(${TARGET_NAMES} PRIVATE ${TARGET_INCLUDE_DIR})