#LibMaths cmake
cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 20)



file(GLOB_RECURSE TARGET_SOURCE_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/*.cc
	${CMAKE_CURRENT_SOURCE_DIR}/*.cxx
	${CMAKE_CURRENT_SOURCE_DIR}/*.c++)

file(GLOB_RECURSE TARGET_HEADER_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.inl)

    
set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})

set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})



get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)



project(${TARGET_NAMES})
add_library(${TARGET_NAMES} ${TARGET_FILES})

target_sources(${TARGET_NAMES} PRIVATE ${TARGET_FILES})
set(LIBMATHS_LIBRARY ${TARGET_NAMES} PARENT_SCOPE)
set(LIBMATHS_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)

target_include_directories(${TARGET_NAMES} PRIVATE ${TARGET_INCLUDE_DIR})
set_target_properties(${TARGET_NAMES} PROPERTIES LINKER_LANGUAGE CXX)
